--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
-
+* {
+	margin: 0;
+	padding: 0;
+}
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
@@ -51,7 +54,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+	padding: 30px 0px;
   background-color: #252831;
   text-align:center;
 }
@@ -105,8 +108,8 @@ nav h1 a {
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
+	width: 100%;
+	padding: 15px 0;
   background-color: #3397DB;
   align-items: center;
 }
@@ -115,7 +118,8 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+	text-align: center;
+	padding-top: 15px;
 }
 .filter-options select {
   background-color: white;
@@ -124,28 +128,28 @@ nav h1 a {
   font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+	margin: 9px;
+	width: calc(50% - 20px);
 }
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
   text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	justify-content: space-around;
 }
 #restaurants-list li {
   background-color: #fff;
-  border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
-  min-height: 380px;
-  padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 30.333333%;
+	margin: 15px;
+	border-radius: 4px;
+	overflow: hidden;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -156,27 +160,28 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #252831;
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 20px;
   text-transform: uppercase;
 }
 #restaurants-list p {
-  margin: 0;
+  margin: 0 0 0 20px;
   font-size: 11pt;
+	color: #888;
 }
 #restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  margin: 20px;
+  padding: 14px 30px;
+	border-radius: 30px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -258,7 +263,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -272,4 +277,23 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+
+.wrapper {
+	width: 1120px;
+	margin: 0 auto;
+}
+
+@media (max-width: 1120px) {
+	.wrapper {
+		width: 100%;
+	}
+
+}
+
+@media (max-width: 999px) {
+	#restaurants-list li {
+		width: 46%;
+	}
 }
