--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-	margin-top: 140px;
 }
 #footer {
   background-color: #444;
@@ -49,7 +48,6 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px;
-  text-align: center;
   text-transform: uppercase;
 }
 /* ====================== Navigation ====================== */
@@ -218,6 +216,7 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   margin: 30px;
+	margin-top: 170px;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -247,30 +246,60 @@ nav h1 a {
   border-top: 1px solid #fff;
   width: 50%;
 }
-#reviews-container {
-}
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
   font-weight: 300;
 	margin: 30px;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
+	border-radius: 5px;
+  box-shadow: 0px 2px 15px #00000026;
   display: block;
   list-style-type: none;
   margin: 0 30px 30px 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
+	display: flex;
+	-webkit-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	flex-wrap: wrap;
 }
-#reviews-list li p {
-  margin: 0 0 10px;
+
+#reviews-list li p:first-child {
+	width: calc(50% - 30px);
+	font-size: 1.5em;
+	padding: 5px 15px;
+	color: white;
+	background-color: #333;
+}
+
+#reviews-list li p:nth-child(2) {
+	width: calc(50% - 30px);
+	padding: 0px 15px;
+	line-height: 40px;
+	text-align: right;
+	color: rgba(255,255,255,.75);
+	background-color: #333;
+}
+
+#reviews-list li p:nth-child(3) {
+	color: white;
+	background-color: #f18200;
+	margin: 15px 15px 0px;
+	padding: 5px 15px;
+	border-radius: 25px;
+}
+
+#reviews-list li p:last-child {
+	padding: 15px;
 }
 
 #restaurant-hours{
